--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,3 +1,7 @@
+- name: Kyle Castellani
+  casual: audio/kyle-castellani-casual.mp3
+  professional: audio/kyle-castellani-professional.mp3
+
 - name: Janet Ault
   casual: audio/janet-ault-casual.mp3
   professional: audio/janet-ault-professional.mp3
