--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,39 +1,39 @@
-- name: Kyle Castellani
+- name: Kyle
   casual: audio/kyle-castellani-casual.mp3
   professional: audio/kyle-castellani-professional.mp3
 
-- name: Janet Ault
+- name: Janet
   casual: audio/janet-ault-casual.mp3
   professional: audio/janet-ault-professional.mp3
 
-- name: Rachel Fulginiti
+- name: Rachel
   casual: audio/rachel-fulginiti-casual.mp3
   professional: audio/rachel-fulginiti-professional.mp3
 
-- name: Bill DeBusk
+- name: Bill
   casual: audio/bill-debusk-casual.mp3
   professional: audio/bill-debusk-professional.mp3
 
-- name: Eric Hartmann
+- name: Eric H
   casual: audio/eric-hartmann-casual.mp3
   professional: audio/eric-hartmann-professional.mp3
 
-- name: Arielle DeLisle
+- name: Arielle
   casual: audio/arielle-delisle-casual.mp3
   professional: audio/arielle-delisle-professional.mp3
 
-- name: Eric Bodrero
+- name: Eric B
   casual: audio/eric-bodrero-casual.mp3
   professional: audio/eric-bodrero-professional.mp3
 
-- name: Jim Myers
+- name: Jim
   casual: audio/jim-myers-casual.mp3
   professional: audio/jim-myers-professional.mp3
 
-- name: Adam Lofbomm
+- name: Adam
   casual: audio/adam-lofbomm-casual.mp3
   professional: audio/adam-lofbomm-professional.mp3
 
-- name: Mark Budwill
+- name: Mark
   casual: audio/mark-budwill-casual.mp3
   professional: audio/mark-budwill-professional.mp3
