--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,3 +1,35 @@
+- name: Jim
+  casual: audio/jim-myers-casual.mp3
+  professional: audio/jim-myers-professional.mp3
+
+- name: Adam
+  casual: audio/adam-lofbomm-casual.mp3
+  professional: audio/adam-lofbomm-professional.mp3
+
+- name: Mark
+  casual: audio/mark-budwill-casual.mp3
+  professional: audio/mark-budwill-professional.mp3
+
+- name: Eric H
+  casual: audio/eric-hartmann-casual.mp3
+  professional: audio/eric-hartmann-professional.mp3
+
+- name: Tim
+  casual: audio/tim-shoesmith-casual.mp3
+  professional: audio/tim-shoesmith-professional.mp3
+
+- name: Kyle
+  casual: audio/kyle-castellani-casual.mp3
+  professional: audio/kyle-castellani-professional.mp3
+  
+- name: Bill
+  casual: audio/bill-debusk-casual.mp3
+  professional: audio/bill-debusk-professional.mp3
+  
+- name: Eric B
+  casual: audio/eric-bodrero-casual.mp3
+  professional: audio/eric-bodrero-professional.mp3
+
 - name: Arielle
   casual: audio/arielle-delisle-casual.mp3
   professional: audio/arielle-delisle-professional.mp3
@@ -17,31 +49,3 @@
 - name: Rachel
   casual: audio/rachel-fulginiti-casual.mp3
   professional: audio/rachel-fulginiti-professional.mp3
-
-- name: Kyle
-  casual: audio/kyle-castellani-casual.mp3
-  professional: audio/kyle-castellani-professional.mp3
-
-- name: Eric B
-  casual: audio/eric-bodrero-casual.mp3
-  professional: audio/eric-bodrero-professional.mp3
-  
-- name: Bill
-  casual: audio/bill-debusk-casual.mp3
-  professional: audio/bill-debusk-professional.mp3
-
-- name: Eric H
-  casual: audio/eric-hartmann-casual.mp3
-  professional: audio/eric-hartmann-professional.mp3
-
-- name: Jim
-  casual: audio/jim-myers-casual.mp3
-  professional: audio/jim-myers-professional.mp3
-
-- name: Adam
-  casual: audio/adam-lofbomm-casual.mp3
-  professional: audio/adam-lofbomm-professional.mp3
-
-- name: Mark
-  casual: audio/mark-budwill-casual.mp3
-  professional: audio/mark-budwill-professional.mp3
