--- a/_data/people.yml
+++ b/_data/people.yml
@@ -30,10 +30,10 @@
   casual: audio/kyle-castellani-casual.mp3
   professional: audio/kyle-castellani-professional.mp3
 
-- name: Lex 🇨🇦
+- name: Lex [CAN]
   casual: audio/lex-van-nugent-casual.mp3
   professional: audio/lex-van-nugent-professional.mp3
 
-- name: Tim 🇬🇧
+- name: Tim [UK]
   casual: audio/tim-shoesmith-casual.mp3
   professional: audio/tim-shoesmith-professional.mp3
