--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@11ty/eleventy": "^1.0.0",
     "amplitudejs": "^5.3.2",
     "picnic": "^7.1.0"
   }
