--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "dependencies": {},
+  "scripts": {
+    "clean": "rimraf public",
+    "dev:tailwind": "npx tailwindcss -i src/css/tailwind.css -o public/css/styles.css --watch",
+    "dev:eleventy": "npx @11ty/eleventy --serve",
+    "build:tailwind": "npx tailwindcss -i src/css/tailwind.css -o public/css/styles.css --minify",
+    "build:eleventy": "ELEVENTY_PRODUCTION=true npx @11ty/eleventy",
+    "dev": "npm-run-all clean --parallel dev:*",
+    "build": "NODE_ENV=production npm-run-all clean build:tailwind build:eleventy"
+  },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
     "amplitudejs": "^5.3.2",
-    "picnic": "^7.1.0"
+    "autoprefixer": "^10.4.2",
+    "npm-run-all": "^4.1.5",
+    "picnic": "^7.1.0",
+    "postcss": "^8.4.6",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.18"
   }
 }
