--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@11ty/eleventy": "^1.0.0",
     "amplitudejs": "^5.3.2",
     "autoprefixer": "^10.4.2",
+    "eleventy-plugin-metagen": "^1.5.2",
     "npm-run-all": "^4.1.5",
     "picnic": "^7.1.0",
     "postcss": "^8.4.6",
