--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "amplitudejs": "^5.3.2",
     "autoprefixer": "^10.4.2",
     "eleventy-plugin-metagen": "^1.5.2",
+    "eleventy-plugin-svg-sprite": "^1.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.6",
     "rimraf": "^3.0.2",
