--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "scripts": {
-    "clean": "rimraf public",
-    "dev:tailwind": "npx tailwindcss -i src/css/tailwind.css -o public/css/styles.css --watch",
-    "dev:eleventy": "npx @11ty/eleventy --serve",
-    "build:tailwind": "npx tailwindcss -i src/css/tailwind.css -o public/css/styles.css --minify",
-    "build:eleventy": "ELEVENTY_PRODUCTION=true npx @11ty/eleventy",
-    "dev": "npm-run-all clean --parallel dev:*",
-    "build": "NODE_ENV=production npm-run-all clean build:tailwind build:eleventy"
+    "clean": "rimraf dist",
+    "dev:eleventy": "npx eleventy --serve",
+    "build:eleventy": "ELEVENTY_PRODUCTION=true eleventy",
+    "dev": "run-p dev:*",
+    "build": "NODE_ENV=production run-s clean build:*"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
-    "amplitudejs": "^5.3.2",
-    "autoprefixer": "^10.4.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    
+    "@11ty/eleventy": "^2.0.0-canary.11",
     "eleventy-plugin-metagen": "^1.5.2",
     "eleventy-plugin-svg-sprite": "^1.2.2",
-    "npm-run-all": "^4.1.5",
+    "eleventy-plugin-gen-favicons": "^1.1.0",
+
+    "amplitudejs": "^5.3.2",
+    
     "postcss": "^8.4.6",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^3.0.18"
+    "clean-css": "^5.3.0",
+    "autoprefixer": "^10.4.2",
+    "tailwindcss": "^3.0.18",
+
+    "html-minifier": "^4.0.0"
   }
 }
