--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev:eleventy": "npx eleventy --serve",
     "build:eleventy": "ELEVENTY_PRODUCTION=true eleventy",
     "dev": "run-p dev:*",
-    "build": "NODE_ENV=production run-s clean build:*"
+    "build": "NODE_ENV=production run-s clean build:eleventy"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
