--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
     "build": "NODE_ENV=production ELEVENTY_PRODUCTION=true eleventy"
   },
   "devDependencies": {   
-    "@11ty/eleventy": "^1.0.1",
-    "eleventy-plugin-metagen": "^1.5.2",
-    "eleventy-plugin-svg-sprite": "^1.2.2",
-    "eleventy-plugin-gen-favicons": "^1.1.0",
+    "@11ty/eleventy": "1.0.1",
+    "eleventy-plugin-metagen": "1.5.2",
+    "eleventy-plugin-svg-sprite": "1.2.2",
+    "eleventy-plugin-gen-favicons": "1.1.0",
 
-    "amplitudejs": "^5.3.2",
+    "amplitudejs": "5.3.2",
     
-    "postcss": "^8.4.6",
-    "clean-css": "^5.3.0",
-    "autoprefixer": "^10.4.2",
-    "tailwindcss": "^3.0.18",
+    "postcss": "8.4.6",
+    "clean-css": "5.3.0",
+    "autoprefixer": "10.4.2",
+    "tailwindcss": "3.0.18",
 
-    "html-minifier": "^4.0.0"
+    "html-minifier": "4.0.0"
   }
 }
