--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "scripts": {
-    "dev": "npx eleventy --serve",
-    "build": "NODE_ENV=production ELEVENTY_PRODUCTION=true eleventy"
+    "clean": "rimraf _site",
+    "dev":   "cross-env NODE_ENV=development npm run clean && eleventy --serve --incremental",
+    "build": "cross-env NODE_ENV=production  npm run clean && eleventy"
   },
-  "devDependencies": {   
-    "@11ty/eleventy": "1.0.1",
-    "eleventy-plugin-metagen": "1.5.2",
-    "eleventy-plugin-svg-sprite": "1.2.2",
-    "eleventy-plugin-gen-favicons": "1.1.0",
-
+  "dependencies": {
+    "@11ty/eleventy": "2.0.1",
+    "eleventy-plugin-svg-sprite": "2.4.2",
     "amplitudejs": "5.3.2",
-    
-    "postcss": "8.4.6",
-    "clean-css": "5.3.0",
-    "autoprefixer": "10.4.2",
-    "tailwindcss": "3.0.18",
-
-    "html-minifier": "4.0.0"
+    "tailwindcss": "3.4.1"
+  },
+  "devDependencies": {
+    "cross-env": "7.0.3",
+    "html-minifier": "4.0.0",
+    "netlify-plugin-cache": "1.0.3",
+    "postcss": "8.4.33",
+    "postcss-lightningcss": "1.0.0",
+    "rimraf": "^5.0.0"
   }
 }
