--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@11ty/eleventy": "2.0.1",
     "eleventy-plugin-svg-sprite": "2.4.2",
     "amplitudejs": "5.3.2",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.7"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
-    "html-minifier": "4.0.0",
+    "htmlnano": "2.1.1",
     "netlify-plugin-cache": "1.0.3",
-    "postcss": "8.4.33",
+    "postcss": "8.4.41",
     "postcss-lightningcss": "1.0.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "6.0.1"
   }
 }
